<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/book_name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_book_name"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/request_from"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_request_from"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/borrower_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_burrower_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/book_status1"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_book_status"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>